--- a/vistas/css/estilos_home_2.css
+++ b/vistas/css/estilos_home_2.css
@@ -135,7 +135,8 @@ nav samp{
     background-color: #fff;
     margin-top: 5px;
     border: 1px solid #ccc;
-    border-radius: 10px;  
+    border-radius: 10px; 
+    padding: 00.5em; 
 }
 
 .publicaciones input{
@@ -158,10 +159,10 @@ nav samp{
 }
 
 .publi-img-perfil{
-    width: 95px;
+    width: 80px;
     height: 75px;
-    border: 1px solid #ccc;
-    border-radius: 30px;
+    border: 1px solid rgb(204, 204, 204);
+    border-radius: 80px;
     margin-right: 10px;   
 }
 
@@ -180,11 +181,18 @@ video{
     display: block;
 }
 .link_mostrar{
-  
     display: flex;
+   
+}
+#like{
+    margin-left: 0.5em;
+    margin-top: 1em;
+    margin-right: 1em;
+
 }
 
-.comentario-nombre , #like{
+
+.comentario-nombre {
 
     margin-left: 10px;
     margin-bottom: 7px;
@@ -273,9 +281,10 @@ video{
 
 #perfil{
     margin: 10px auto;
-    width: 90%;
+    width: 80%;
+    background-color: #fff;
     overflow: hidden;
-    border-radius: 70px;
+    border-radius: 30px;
 }
 #perfil > ul li{
     list-style: none;
@@ -297,22 +306,44 @@ video{
     width: 150px;
     border-radius: 80px;
 }
-
-#perfil > ul li a{
+#perfil>ul  li button{
+    height: 40px;
+    background-color: #446996;
+    color: white;
     
-    padding: 2% 3%;
-    background-color: #2c3e50;
-    color: #fff;
-    border-radius: 5px;
-    font-weight: bold;
-    text-decoration: none;
+}
+#agregar{
+    color: white;
+    background-color: #446996;
+    height: 40px;
+    padding: 0.5em;
+
+}
+#enviada{
+    height: 40px;
+    padding: 0.5em;
+    
+
+}
+
+#editar,#amigos{
+    
+    height: 40px;
+    padding: 0.5em;
+    background-color: #446996;
+    color: white;
+
 }
 
 #perfil > ul li >samp{
     padding: 3px;
-    background-color: #1caff6;
-    color: #fff;
-    margin-left: 10px;
+    /*background-color: #1caff6;
+    color: #fff;*/
+  
+
+    
+   
+  
 }
 
 .resultado-busqueda{
@@ -348,23 +379,54 @@ video{
 
 
 .editar_perfil{
-    width: 50%;
+    max-width:  1200px;
     margin: auto;
+    margin-top: 2em;
+    display: flex;
+    flex-direction: row;
+
+    height: 400px;
+    
 } 
 
 .editar_perfil .form_editar{
     text-align: center;
+    
+}
+.titulo_editar{
+   margin-left: 3em;
 }
 
 .editar_perfil form{
     display: flex;
     flex-direction: column;
+    width: 100%;
+    margin-left: 5em;
+  
+    height: 250px;
+    text-align: center;
 }
 .editar_perfil input{
-    width: 50%;
-    margin: auto;
-    padding: 10px;
-    margin-top: 10px;
+    height: 50px;
+    margin-top: 5px;
+    text-align: center;
+    border-radius: 1em;
+}
+.imagen-perfil{
+   margin-top: 3.8em;
+   width: 50%;
+}
+#img{
+    width: 100%;
+}
+#volver{
+    color: white;
+    height: 40px;
+    padding: 0.5em;
+    background-color: #446996;
+    margin-top: 2em;
+    margin-left: 10em;
+
 }
 
 .menuCSS3 ul {
