--- a/vistas/css/estilos_home_2.css
+++ b/vistas/css/estilos_home_2.css
@@ -394,7 +394,8 @@ video{
     
 }
 .titulo_editar{
-   margin-left: 3em;
+   margin-left: 4em;
+  
 }
 
 .editar_perfil form{
@@ -410,7 +411,7 @@ video{
     height: 50px;
     margin-top: 5px;
     text-align: center;
-    border-radius: 1em;
+    border-radius: 0.5em;
 }
 .imagen-perfil{
    margin-top: 3.8em;
@@ -424,7 +425,7 @@ video{
     height: 40px;
     padding: 0.5em;
     background-color: #446996;
-    margin-top: 2em;
+    margin-top: 4em;
     margin-left: 10em;
 
 }
@@ -460,7 +461,10 @@ video{
 .prueba{
    display: flex;
    flex-direction: column;
-   margin-top: 1rem;   
+   margin-top: 1rem;  
+  
+ 
+
 }
 
 
@@ -517,3 +521,8 @@ video{
       }
 
   }
+
+#botonn{
+    color: white;
+    background-color: #446996;
+}
