--- a/vistas/css/estilos_home_2.css
+++ b/vistas/css/estilos_home_2.css
@@ -176,6 +176,7 @@ nav samp{
     width: 100%;
 }
 video{
+    position: absolute;
     width: 100%;
     margin: auto;
     display: block;
@@ -255,8 +256,7 @@ video{
         font-size: 10px;
     }
     .navegacion samp{
-        font-size: 1rem;
-       
+        font-size: 1rem; 
     }
 
     .publicaciones{
@@ -271,9 +271,7 @@ video{
     .publicaciones input{
         width: 80%;
         height: 30px; 
-    }
-
-    
+    }   
         
 } 
 
@@ -339,10 +337,6 @@ video{
     padding: 3px;
     /*background-color: #1caff6;
     color: #fff;*/
-  
-
-    
-   
   
 }
 
