--- a/vistas/css/estilos_home_2.css
+++ b/vistas/css/estilos_home_2.css
@@ -163,7 +163,10 @@ nav samp{
     height: 75px;
     border: 1px solid rgb(204, 204, 204);
     border-radius: 80px;
-    margin-right: 10px;   
+    margin-right: 10px;
+    margin-top: 1em;
+   
+       
 }
 
 .nombre_usuario{
@@ -174,6 +177,7 @@ nav samp{
 
 .publi-thumb img{
     width: 100%;
+    margin-top:0.5em;
 }
 video{
     width: 100%;
@@ -394,7 +398,6 @@ video{
 
 .editar_perfil input{
     height: 50px;
-    margin-top: 5px;
     text-align: center;
     border-radius: 0.5em;
 }
